--- a/calculator.html
+++ b/calculator.html
@@ -12,9 +12,9 @@ num.value = Math.pow(num.value, 3);
 
 }
 
-function morecube() {
+function moresin() {
 
-var num = document.getElementById("n2");
+var num = document.getElementById("n3");
 
 num.value = Math.pow(num.value, 4);
 
@@ -36,9 +36,9 @@ Number:
 
 <button onclick="cube()"> x^3 </button>
 
-<input type="text" id="n2"><p>
+<input type="text" id="n3"><p>
 
-<button onclick="morecube()"> x^4 </button>
+<button onclick="moresin()"> x^4 </button>
 
 </body>
 
